# test_project

./: .gitignore  LICENSE  README.md  docker-compose-dev.yaml  docker-compose.yaml  env.template
app/: Dockerfile  app.py  config.py  db.py  pyproject.toml
app/business_logic/dto/: __init__.py  item.py
app/business_logic/services/: __init__.py  item.py
app/data_access/: db_connector.py  exceptions.py  interfaces.py
app/data_access/dao/: __init__.py  base.py  item.py
app/logger/: logger.py
app/profiler_dump/: 1713220730-GET-api.v1.item-4ms.prof  1713220840-POST-api.v1.item-15ms.prof  1713220840-POST-api.v1.item-1ms.prof
app/resources/: item.py
app/static/swagger/: swagger.json
app/tests/: test_app.py
app/tests/test_resources/: test_item.py
app/tests/test_services/: test_item.py
app/tests/test_utils/: test_validators.py
app/utils/: exceptions.py  memory_check.py  validators.py
